--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chankify",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -32,7 +33,7 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all"     
     ],
     "development": [
       "last 1 chrome version",
